# tech-learning-and-projects

./: .gitattributes  .gitignore  .markdown-link-check.json  .markdownlint.jsonc  README.md  README_EN.md
crewai-multi-agent-demo/: .gitignore  Makefile  README.md  env.example  pyproject.toml
crewai-multi-agent-demo/app/: __init__.py  config.py  main.py
crewai-multi-agent-demo/app/agents/: __init__.py  editor.py  researcher.py  seo_optimizer.py  writer.py
crewai-multi-agent-demo/app/api/: routes.py
crewai-multi-agent-demo/app/crews/: __init__.py  content_crew.py
crewai-multi-agent-demo/app/tasks/: __init__.py  content_tasks.py
crewai-multi-agent-demo/app/tools/: __init__.py  custom_tools.py
crewai-multi-agent-demo/tests/: conftest.py  test_crew.py  test_tools.py
langgraph-mcp-agent-demo/: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
langgraph-mcp-agent-demo/app/: config.py  main.py
langgraph-mcp-agent-demo/app/agent/: graph.py  nodes.py  prompts.py  state.py
langgraph-mcp-agent-demo/app/api/: routes.py
langgraph-mcp-agent-demo/app/mcp_servers/: db_server.py  file_server.py
langgraph-mcp-agent-demo/app/memory/: manager.py
langgraph-mcp-agent-demo/app/rag/: indexer.py  reranker.py  retriever.py
langgraph-mcp-agent-demo/docs/sample_docs/: api-reference.md  deployment-guide.md
langgraph-mcp-agent-demo/tests/: conftest.py  test_graph.py  test_mcp.py
learning-notes/: .audit-progress.md  .update-log.md  README.md
rag-llm-agent-platform/: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  env.example  pytest.ini  requirements.txt
scripts/: briefing-mcp.py  briefing-tools.py  check-before-push.ps1  check-before-push.sh  doc-lint.sh  update-kiro-skills.sh
shared/: __init__.py  add_ai_videos_complete.py  add_video_links.py  add_video_links_v2.py  (+2 more)
(+924 files in other folders)
