[project]
name = "crewai-multi-agent-demo"
version = "0.1.0"
description = "CrewAI 多 Agent 协作示例 — 技术博客内容创作流水线"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.86",
    "crewai-tools>=0.14",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "python-dotenv>=1.0",
    "mem0ai>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
