[project]
name = "langgraph-mcp-agent-demo"
version = "0.1.0"
description = "LangGraph + MCP 智能 Agent 示例项目"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "langgraph-checkpoint-postgres>=2.0",
    "mem0ai>=0.1",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
